--- a/notebooks/simulation_bits_multipec.ipynb
+++ b/notebooks/simulation_bits_multipec.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "bca7be93",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "347f0e69",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ad5ff6aa",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f8b8eaea",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "id": "c0bfe164",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "id": "62a4ba90",
    "metadata": {},
    "outputs": [],
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "id": "a73e0148",
    "metadata": {},
    "outputs": [
@@ -718,16 +718,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Perfect Prediction 17\n",
+      "Subset 3\n",
       "Skipping group 'Subset' in N=2, bits=5 due to insufficient samples (n=3)\n",
+      "Imperfect Prediction 25\n",
       "Kruskal-Wallis H=29.651, p=0.00000005172159466295 for N=2, bits=5\n",
       "Perfect Prediction vs Imperfect Prediction: U=0.0, p=0.00000005557752873173\n",
+      "Perfect Prediction 12\n",
+      "Subset 17\n",
+      "Imperfect Prediction 37\n",
       "Kruskal-Wallis H=27.441, p=0.00000109943607284090 for N=2, bits=6\n",
       "Perfect Prediction vs Subset: U=26.0, p=0.00082819323877218168\n",
       "Perfect Prediction vs Imperfect Prediction: U=42.0, p=0.00003002320869162231\n",
       "Subset vs Imperfect Prediction: U=119.0, p=0.00028148184620721377\n",
+      "Perfect Prediction 29\n",
+      "Subset 1\n",
       "Skipping group 'Subset' in N=3, bits=5 due to insufficient samples (n=1)\n",
+      "Imperfect Prediction 75\n",
       "Kruskal-Wallis H=62.143, p=0.00000000000000319424 for N=3, bits=5\n",
       "Perfect Prediction vs Imperfect Prediction: U=0.0, p=0.00000000000000328826\n",
+      "Perfect Prediction 27\n",
+      "Subset 17\n",
+      "Imperfect Prediction 106\n",
       "Kruskal-Wallis H=66.112, p=0.00000000000000440529 for N=3, bits=6\n",
       "Perfect Prediction vs Subset: U=164.0, p=0.11718016011331008897\n",
       "Perfect Prediction vs Imperfect Prediction: U=204.0, p=0.00000000000685047436\n",
@@ -843,6 +855,7 @@
     "    filtered_labels = []\n",
     "    filtered_data = []\n",
     "    for label_, vals_ in zip(labels, data):\n",
+    "        print(label_, len(vals_))\n",
     "        if len(vals_) >= MIN_SAMPLES:\n",
     "            filtered_labels.append(label_)\n",
     "            filtered_data.append(vals_)\n",
@@ -963,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
