--- a/notebooks/simulation_bits_multipec.ipynb
+++ b/notebooks/simulation_bits_multipec.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3223893e",
+   "metadata": {},
+   "source": [
+    "Import dependencies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bca7be93",
@@ -31,6 +39,14 @@
     "from scipy.stats import shapiro, levene, kruskal, mannwhitneyu\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d75bd8f2",
+   "metadata": {},
+   "source": [
+    "Define paths."
    ]
   },
   {
@@ -57,32 +73,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6d906eb",
+   "metadata": {},
+   "source": [
+    "Define simulation parameters."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ad5ff6aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "subnetwork_number = 3\n",
+    "subnetwork_number = 3 # Number of networks (stimuli) in a simulation\n",
     "bits_number = 6 # Number of bits representing a stimulus (5 or 6)\n",
     "test_number = 1\n",
     "\n",
     "assert subnetwork_number in [2,3]\n",
     "assert bits_number in [5,6]\n",
     "\n",
-    "N,bits,rounds = subnetwork_number,bits_number,test_number"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f8b8eaea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs=10\n",
-    "seq_multiplier=10\n",
-    "n = 6 #number of stimuli per stimulus type\n",
+    "N,bits,rounds = subnetwork_number,bits_number,test_number\n",
+    "\n",
+    "fs=10 # Number of repetitions per stimulus\n",
+    "seq_multiplier=10 # Number of repetitions per stimulus sequence\n",
+    "n = 6 # Number of characters per stimulus\n",
     "\n",
     "letter = [l for l in ascii_letters if l.isupper()]\n",
     "number = list(digits)\n",
@@ -165,13 +181,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46f06256",
+   "metadata": {},
+   "source": [
+    "Define ground truth groups based on the number of networks and bits."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c0bfe164",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define ground truth groups based on the number of networks and bits\n",
     "group_a, group_b, group_c = set(), set(), set()\n",
     "\n",
     "N, bits = 2, 5\n",
