--- a/notebooks/simulation_bits_multipec.ipynb
+++ b/notebooks/simulation_bits_multipec.ipynb
@@ -106,6 +106,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "16658884",
+   "metadata": {},
+   "source": [
+    "Run simulation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5e4757d1",
@@ -219,6 +227,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a64b8b8f",
+   "metadata": {},
+   "source": [
+    "Set a universal plotting style."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "62a4ba90",
@@ -226,6 +242,14 @@
    "outputs": [],
    "source": [
     "set_plotting_style()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5021d9d",
+   "metadata": {},
+   "source": [
+    "Plot PEC evolution for simulation configuration determined by N and bits variables defined above."
    ]
   },
   {
@@ -293,6 +317,14 @@
     "plt.savefig(figures_folder/\"PEC_evolution_{}nets_{}bits.png\".format(N, bits), dpi=300)\n",
     "\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c16dc03",
+   "metadata": {},
+   "source": [
+    "For the same configuration as above, plot PEC distribution for networks grouped based on their accuracy: perfect prediction, subset or imperfect prediction."
    ]
   },
   {
@@ -470,6 +502,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa2c9d77",
+   "metadata": {},
+   "source": [
+    "Make a scatter plot of PEC vs ground truth overlap."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7b38830f",
@@ -547,15 +587,22 @@
     "plt.legend(title=\"Category\", loc='upper left')\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Save high-quality version\n",
     "plt.savefig(figures_folder/\"PEC_vs_Accuracy_{}nets_{}bits.png\".format(N, bits))\n",
     "\n",
     "plt.show()\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3ba9852",
+   "metadata": {},
+   "source": [
+    "Check correlation between network seed (node pair) PEC (PEC[2]) and network PEC (PEC[n]). "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "522f9bc9",
    "metadata": {},
    "outputs": [
@@ -607,11 +654,19 @@
     "# Compute Pearson correlation\n",
     "corr, p_value = pearsonr(pec_0, pec_1)\n",
     "\n",
-    "print(f\"Pearson correlation between pec[0] and pec[1]: {corr:.4f}\")\n",
+    "print(f\"Pearson correlation between PEC[2] and PEC[n]: {corr:.4f}\")\n",
     "print(f\"P-value: {p_value:.4e}\")\n",
     "\n",
     "plt.plot(pec_0)\n",
     "plt.plot(pec_1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dff0e329",
+   "metadata": {},
+   "source": [
+    "Now, make composite figures of PEC evolution and PEC distribution across network groups, including all configurations."
    ]
   },
   {
