--- a/notebooks/cnn_random_pruning_specificity.ipynb
+++ b/notebooks/cnn_random_pruning_specificity.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random pruning of the CNN model.\n",
+    "\n",
+    "#### This notebook tests 1,000 iterations of randomly pruned CNN models. Class specificity of random networks is compared to that of the MultiPEC-identified networks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define paths."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -20,15 +36,7 @@
     "id": "d_AZRmT1-0p3",
     "outputId": "8584bd95-05c4-40d4-9e1e-0f458833c70e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/gdrive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -46,6 +54,13 @@
     "MODEL_PATH = INPUT_FOLDER/\"model.pth\"\n",
     "RESULTS_FOLDER = project_root/\"data/results/cnn/\"\n",
     "FIGURES_FOLDER = project_root/\"data/figures/cnn/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the class specificity distributions (as boxplots) for random and MultiPEC networks."
    ]
   },
   {
@@ -168,6 +183,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check statistical differences between class specificity distributions of random and MultiPEC networks. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -223,6 +245,13 @@
     "    test_name = \"Mann–Whitney U\"\n",
     "\n",
     "print(f\"{test_name}: statistic={test_res.statistic:.4f}, p-value={test_res.pvalue:.4e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize overall kernel density estimate of class specificity scores for random and MultiPEC networks."
    ]
   },
   {
@@ -313,6 +342,13 @@
     "plt.savefig(os.path.join(FIGURES_FOLDER, \"Random_vs_PEC_kde.png\"),\n",
     "            bbox_inches='tight', dpi=300)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the kernel density estimates per class, and print the number of data points for each distribution."
    ]
   },
   {
