--- a/notebooks/cnn_pruning_results.ipynb
+++ b/notebooks/cnn_pruning_results.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import dependencies and define project path."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,6 +39,13 @@
     "    return path\n",
     "\n",
     "project_root = find_repo_root()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define path to load results and save figures. `ext` can be \"_4down\", \"_34\", \"_23\", \"_12\", \"_05median\", \"05_up\" - based on PEC range of identified networks. "
    ]
   },
   {
@@ -139,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load subnets:"
+    "Load networks."
    ]
   },
   {
@@ -188,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute correlation between the initial node pair error and the final net error:"
+    "Compute correlation between the initial node pair error and the final net error."
    ]
   },
   {
@@ -229,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot net errors in order as they are generated during the analysis (index):"
+    "Plot net errors in order as they are generated during the analysis (index)."
    ]
   },
   {
@@ -261,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the accuracy change per class:"
+    "Plot the accuracy change per class."
    ]
   },
   {
@@ -481,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check correlation between subnetwork size and accuracy change:"
+    "Check correlation between subnetwork size and accuracy change."
    ]
   },
   {
@@ -528,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check shared nodes between classes:"
+    "Check shared nodes between classes."
    ]
   },
   {
@@ -575,13 +589,6 @@
     "plt.colorbar(shrink=0.8)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -600,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
